# jiraagent

./: .gitignore  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml
agent-config/: README.md
docs/: CONTEXT_GENERATION.md
jira_agent/: log.py  prompts.py
jira_agent/context/: __init__.py  generator.py
jira_agent/hooks/: security.py
jira_agent/integrations/: __init__.py  health.py
jira_agent/integrations/browser/: __init__.py
jira_agent/integrations/jira/: __init__.py  client.py  jira_mcp.py
src/jira_agent/: __init__.py  __main__.py  agent.py  config.py  summary.py  validation.py
src/jira_agent/cli/: __init__.py  args.py
src/jira_agent/context/: __init__.py  generator.py
src/jira_agent/hooks/: __init__.py  audit.py  security.py
src/jira_agent/integrations/: __init__.py  base.py  filesystem_tool.py  health.py
src/jira_agent/integrations/browser/: browser_mcp.py
src/jira_agent/integrations/claude/: __init__.py  claude_sdk.py
src/jira_agent/integrations/jira/: client.py
tests/: __init__.py  test_agent.py  test_cli.py  test_config.py  test_context.py  test_health.py  test_hooks_audit.py  test_hooks_security.py  test_summary.py  test_validation.py
