[project]
    name = "jira-agent"
    version = "0.1.0"
    description = "AI agent that takes Jira tickets and implements code changes"
    requires-python = ">=3.11"
    dependencies = [
        "claude-agent-sdk>=0.0.19",
        "httpx>=0.27",
        "pydantic>=2.0",
        "pydantic-settings>=2.0",
        "tyro>=0.9",
    ]

    [project.optional-dependencies]
        dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=4.0"]

    [project.scripts]
        jira-agent = "jira_agent:main"

[build-system]
    requires      = ["hatchling"]
    build-backend = "hatchling.build"

[tool.uv]
    package = true

[tool.pytest.ini_options]
    testpaths                          = ["tests"]
    asyncio_mode                       = "auto"
    asyncio_default_fixture_loop_scope = "function"
    addopts                            = "-v --tb=short"

[tool.ruff]
    indent-width = 4
    line-length  = 120

    [tool.ruff.format]
        indent-style = "space"
